# remind

./: .env.dev  .env.test  .pre-commit-config.yaml  .pre-commit-requirements.txt  README.md  TUTORIAL.md  compose.deploy.yaml  compose.yaml
backend/: .dockerignore  .env.dev  .env.prod  .gitignore  Dockerfile  README.md  entrypoint.sh  pyproject.toml
backend/api/: admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
backend/api/migrations/: 0001_initial.py  0002_alter_subscription_amount_transaction.py  0002_remove_subscription_content.py  0003_usersettings.py  0004_currency_alter_usersettings_options_and_more.py  0005_delete_currency_alter_subscription_amount_and_more.py  0006_alter_usersettings_user.py  0007_alter_subscription_amount_currency_and_more.py  0008_alter_subscription_external_link_and_more.py  0009_alter_subscription_external_link.py  0010_label_subscription_delete_subscriptionlabel.py  0011_alter_label_subscription_and_more.py  0012_remove_subscription_billed_at_subscription_date_end_and_more.py  0013_remove_subscription_amount_and_more.py  0014_remove_subscription_last_reminder_at_and_more.py  0015_plan_name.py  0016_alter_plan_name.py  0017_usersettings_task.py  0018_remove_usersettings_task_and_more.py  0019_alter_usersettings_remind_frequency_and_more.py  0020_plan_expired.py  0021_plan_renewed.py
backend/api/templates/: alert_email.html  password_reset_email.html  report_email.html  welcome_email.html
backend/api/templates/content/: alert_email.html  welcome_email.html
backend/api/tests/: test_alerts.py  test_models.py  test_renews.py  test_report.py  test_setup.py
backend/backend/: celery.py  settings.py  urls.py
backend/config/: gunicorn.prod.py  nginx.conf
docs/: JOURNAL.md  TUTORIAL.md
frontend/: .env.production  index.html  package-lock.json  package.json
infra/: .gitignore  frontend.tf  infra.md
(+105 files in other folders)
