[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Giuseppe Rizzi <giuseppe.rizzi10@gmail.com>"]
readme = "README.md"

[]
[tool.poetry.dependencies]
python = "^3.12"
django = "5.1.6"
asgiref = "^3.8.1"
django-cors-headers = "^4.7.0"
djangorestframework = "^3.15.2"
djangorestframework-simplejwt = "^5.4.0"
pyjwt = "^2.10.1"
pytz = "^2025.1"
sqlparse = "^0.5.3"
psycopg2-binary = "^2.9.10"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
